--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ python:
   - "pypy"
   - "pypy3"
 
+before_install:
+    - "export PYTHONPATH=$PYTHONPATH:$(pwd)"
+
 install:
-  - python setup.py install
   - pip install -r requirements.txt
 
 script: pytest
