--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,8 @@ python:
   - "pypy"
   - "pypy3"
 
-before_install:
-    - "export PYTHONPATH=$PYTHONPATH:$(pwd)"
-
 install:
+  - pip install .
   - pip install -r requirements.txt
 
 script: pytest
