--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,13 @@ env:
   - DJANGO_VERSION=1.11.10
   - DJANGO_VERSION=2.0.2
 
+matrix:
+  exclude:
+    - python: 2.7
+      env: DJANGO_VERSION=2.0.2
+    - python: pypy
+      env: DJANGO_VERSION=2.0.2
+
 before_install:
     - "export PYTHONPATH=$PYTHONPATH:$(pwd)"
 
