Fix setup.py from move of files

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ __pycache__/
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
+src/*.egg-info/
 /.pytest_cache
+.tox/
