--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,28 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
+  # - "2.7"
+  # - "3.4"
+  # - "3.5"
   - "3.6"
-  - "pypy"
-  - "pypy3"
+  # - "pypy"
+  # - "pypy3"
 
 env:
   # Repeat this line to test against different versions
-  - DJANGO_VERSION=1.11.10
-  - DJANGO_VERSION=2.0.2
+  # - DJANGO_VERSION=1.11.10
+  # - DJANGO_VERSION=2.0.2
 
-matrix:
-  exclude:
-    - python: "2.7"
-      env: DJANGO_VERSION=2.0.2
-    - python: "pypy"
-      env: DJANGO_VERSION=2.0.2
+# matrix:
+  # exclude:
+    # - python: "2.7"
+      # env: DJANGO_VERSION=2.0.2
+    # - python: "pypy"
+      # env: DJANGO_VERSION=2.0.2
 
-before_install:
-    - "export PYTHONPATH=$PYTHONPATH:$(pwd)"
+# before_install:
+    # - "export PYTHONPATH=$PYTHONPATH:$(pwd)"
 
 install:
-  - pip install -e .
-  - pip install Django==$DJANGO_VERSION
+  - pip install tox
 
-script: pytest
+script: tox
