Remove broken coverage step in tox

--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,7 @@ deps =
     pytest-cov
     django
 commands =
-    {posargs:py.test --cov --cov-report=term-missing -vv tests}
-    coverage report --omit='.tox/*'
+    {posargs:py.test --cov=scout_apm --cov-report=term-missing -vv tests}
 
 [testenv:bootstrap]
 deps =
