--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     clean,
     check,
-    {py27,py34,py35,py36,pypy},
+    {py27,py34,py35,py36,pypy}-django{18,19,20},
     docs
 
 [testenv]
@@ -23,7 +23,9 @@ deps =
     pytest
     pytest-travis-fold
     pytest-cov
-    django
+    django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<2.0
+    django20: Django>=2.0,<2.1
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing -vv tests}
 
@@ -34,6 +36,7 @@ deps =
 skip_install = true
 commands =
     python ci/bootstrap.py
+
 [testenv:spell]
 setenv =
     SPELLCHECK=1
