--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist =
     clean,
     check,
-    {py27,py34,py35,py36,pypy}-django{18,19,20},
+    {py27,py34,py35,py36,pypy}-django{18,19},
+    {py34,py35,py36}-django{20}
     docs
 
 [testenv]
