--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,14 @@
 envlist =
     clean,
     check,
-    {py27,py34,py35,py36,pypy}-django{18,19},
-    {py34,py35,py36}-django{20}
+    {py27,py34,py35,py36,pypy,pypy3}-django{18,19},
+    {py34,py35,py36,pypy3}-django{20}
     docs
 
 [testenv]
 basepython =
     pypy: {env:TOXPYTHON:pypy}
+    pypy3: {env:TOXPYTHON:pypy3}
     {py27,docs,spell}: {env:TOXPYTHON:python2.7}
     py34: {env:TOXPYTHON:python3.4}
     py35: {env:TOXPYTHON:python3.5}
