Don't filter branch building on Travis, run tests on PRs and other branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,11 +37,11 @@ notifications:
     on_success: never
     on_failure: always
 
-branches:
-  only:
-    # release tags
-    - /^v\d+\.\d+\.\d+.*$/
-    - master
+# branches:
+#   only:
+#     # release tags
+#     - /^v\d+\.\d+\.\d+.*$/
+#     - master
 
 deploy:
   provider: pypi
