--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 envlist =
     clean,
     check,
-    {py27,py34,py35,py36,pypy,pypy3}-django{18,19},
-    {py34,py35,py36,pypy3}-django{20}
+    {py27,py34,py35,py36,py37,pypy,pypy3}-django{18,19},
+    {py34,py35,py36,py37,pypy3}-django{20}
     docs
 
 [testenv]
@@ -14,7 +14,8 @@ basepython =
     py34: {env:TOXPYTHON:python3.4}
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
-    {bootstrap,clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3.6}
+    py37: {env:TOXPYTHON:python3.7}
+    {bootstrap,clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3.7}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
