--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: python
-python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "pypy3"
+matrix:
+  include:
+    - python: 3.4
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+    - python: "pypy3"
 
 cache: pip
 
