--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 matrix:
   include:
+    - sudo: required
+    services:
+      - docker
     - python: 3.4
     - python: 3.5
     - python: 3.6
