--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,15 @@
 [tox]
+toxworkdir=/tmp/tox
 envlist =
     clean,
     check,
-    {py27,py34,py35,py36,py37,pypy,pypy3}-django{18,19},
-    {py34,py35,py36,py37,pypy3}-django{20}
+    {py34,py35,py36,py37}-django{18,19},
+    {py34,py35,py36,py37}-django{20}
     docs
 
 [testenv]
 basepython =
-    pypy: {env:TOXPYTHON:pypy}
-    pypy3: {env:TOXPYTHON:pypy3}
-    {py27,docs,spell}: {env:TOXPYTHON:python2.7}
+    {docs,spell}: {env:TOXPYTHON:python3.7}
     py34: {env:TOXPYTHON:python3.4}
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
@@ -67,9 +66,9 @@ deps =
     pygments
 skip_install = true
 commands =
-    python setup.py check --strict --metadata --restructuredtext
+    python setup.py check --strict --metadata
     check-manifest {toxinidir}
-    flake8 src tests setup.py --ignore=E501,E121,E123,E126,E226,E24,E704,W503,W504,F811
+    - flake8 src tests setup.py --ignore=E501,E121,E123,E126,E226,E24,E704,W503,W504,F811
 
 [testenv:coveralls]
 deps =
