--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,16 @@ toxworkdir=/tmp/tox
 envlist =
     clean,
     check,
-    {py34,py35,py36,py37}-django{18,19},
-    {py34,py35,py36,py37}-django{20}
+    {py27,py34,py35}-django18,
+    {py27,py34,py35,py36}-django111,
+    {py34,py35,py36,py37}-django20,
+    {py35,py36,py37}-django21,
     docs
 
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3.7}
+    py27: {env:TOXPYTHON:python2.7}
     py34: {env:TOXPYTHON:python3.4}
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
@@ -26,8 +29,9 @@ deps =
     pytest-travis-fold
     pytest-cov
     django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<2.0
+    django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing -vv tests}
 
