--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,12 @@
 [check-manifest]
 ignore = ci/*
+
+[isort]
+default_section = THIRDPARTY
+force_grid_wrap = 0
+include_trailing_comma = True
+known_first_party = scout_apm
+line_length = 88
+multi_line_output = 3
+not_skip = __init__.py
+use_parentheses = True
