--- a/tox.ini
+++ b/tox.ini
@@ -64,12 +64,14 @@ commands =
 [testenv:check]
 deps =
     check-manifest
+    black
     flake8
     isort
 skip_install = true
 commands =
     python setup.py check --strict --metadata
     check-manifest {toxinidir}
+    black --check src tests setup.py
     isort --check-only --recursive src tests setup.py
     - flake8 src tests setup.py --ignore=E501,E121,E123,E126,E226,E24,E704,W503,W504,F811
 
