Fix all flake8 warnings.
Stop disabling checks globally.

Ignore warnings only in the following cases:

- really long line that cannot be split meaningfully (E501 x1)
- importing something to check if it's importable and not doing anything
  with it (F401 x10)
- importing something to use it with exec (F401 x2)
- complex monkeypatching that trips up the linter (F811 x1)
- uncommon test that cannot be refactored easily (F841 x1)

--- a/tox.ini
+++ b/tox.ini
@@ -73,7 +73,7 @@ commands =
     check-manifest {toxinidir}
     black --check src tests setup.py
     isort --check-only --recursive src tests setup.py
-    - flake8 src tests setup.py --ignore=E501,E121,E123,E126,E226,E24,E704,W503,W504,F811
+    flake8 src tests setup.py
 
 [testenv:coveralls]
 deps =
