--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ basepython =
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
     py37: {env:TOXPYTHON:python3.7}
-    {bootstrap,clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3.7}
+    {clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3.7}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -34,14 +34,6 @@ deps =
     django21: Django>=2.1,<2.2
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing -vv tests}
-
-[testenv:bootstrap]
-deps =
-    jinja2
-    matrix
-skip_install = true
-commands =
-    python ci/bootstrap.py
 
 [testenv:spell]
 setenv =
