--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,13 @@
 [check-manifest]
-ignore = ci/*
+ignore =
+    .python-version
+    CHANGELOG.md
+    ci*
+    docs*
+    Makefile
+    requirements.txt
+    tests*
+    tox.ini
 
 [flake8]
 max-line-length = 88
