--- a/setup.cfg
+++ b/setup.cfg
@@ -1,1 +1,23 @@
-# Intentionally empty
+[check-manifest]
+ignore =
+    .python-version
+    CHANGELOG.md
+    ci*
+    docs*
+    Makefile
+    requirements.txt
+    tests*
+    tox.ini
+
+[flake8]
+max-line-length = 88
+
+[isort]
+default_section = THIRDPARTY
+force_grid_wrap = 0
+include_trailing_comma = True
+known_first_party = scout_apm
+line_length = 88
+multi_line_output = 3
+not_skip = __init__.py
+use_parentheses = True
