--- a/tox.ini
+++ b/tox.ini
@@ -3,18 +3,21 @@ toxworkdir=/tmp/tox
 envlist =
     clean,
     check,
-    {py34,py35,py36,py37}-django{18,19},
-    {py34,py35,py36,py37}-django{20}
+    {py27,py34,py35}-django18,
+    {py27,py34,py35,py36}-django111,
+    {py34,py35,py36,py37}-django20,
+    {py35,py36,py37}-django21,
     docs
 
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3.7}
+    py27: {env:TOXPYTHON:python2.7}
     py34: {env:TOXPYTHON:python3.4}
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
     py37: {env:TOXPYTHON:python3.7}
-    {bootstrap,clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3.7}
+    {clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3.7}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -26,18 +29,11 @@ deps =
     pytest-travis-fold
     pytest-cov
     django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<2.0
+    django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing -vv tests}
-
-[testenv:bootstrap]
-deps =
-    jinja2
-    matrix
-skip_install = true
-commands =
-    python ci/bootstrap.py
 
 [testenv:spell]
 setenv =
@@ -59,16 +55,17 @@ commands =
 
 [testenv:check]
 deps =
-    docutils
     check-manifest
+    black
     flake8
-    readme-renderer
-    pygments
+    isort
 skip_install = true
 commands =
     python setup.py check --strict --metadata
     check-manifest {toxinidir}
-    - flake8 src tests setup.py --ignore=E501,E121,E123,E126,E226,E24,E704,W503,W504,F811
+    black --check src tests setup.py
+    isort --check-only --recursive src tests setup.py
+    flake8 src tests setup.py
 
 [testenv:coveralls]
 deps =
