Keep the default verbosity of py.test.
This avoids a massive output when running tox.

--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
 commands =
-    {posargs:py.test --cov=scout_apm --cov-report=term-missing -vv tests}
+    {posargs:py.test --cov=scout_apm --cov-report=term-missing tests}
 
 [testenv:spell]
 setenv =
