Omit the CLI from coverage measurement.
Because it doesn't work, see #140.

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,9 @@ ignore =
 
 [coverage:run]
 branch = True
-omit = src/scout_apm/core/monkey.py
+omit =
+    src/scout_apm/core/cli/core_agent_manager.py
+    src/scout_apm/core/monkey.py
 
 [flake8]
 max-line-length = 88
