Install dependencies when testing with tox.

--- a/tox.ini
+++ b/tox.ini
@@ -25,9 +25,12 @@ passenv =
     *
 usedevelop = false
 deps =
+    psutil
     pytest
     pytest-travis-fold
     pytest-cov
+    PyYAML
+    requests
     django18: Django>=1.8,<1.9
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
