Add full test coverage for the bottle integration.

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,8 @@ passenv =
     *
 usedevelop = false
 deps =
+    bottle
+    py27: mock
     psutil
     pytest
     pytest-travis-fold
@@ -35,6 +37,7 @@ deps =
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    webtest
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing tests}
 
