Add full test coverage for the sqlalchemy integration.

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,7 @@ deps =
     pytest-cov
     PyYAML
     requests
+    sqlalchemy
     webtest
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing tests}
