--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    elasticsearch
     flask
     py27: mock
     psutil
