Add full test coverage for urllib3 instrumentation.

--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,7 @@ deps =
     redis
     requests
     sqlalchemy
+    urllib3
     webtest
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing tests}
