--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     {py27,py34,py35,py36}-django111,
     {py34,py35,py36,py37}-django20,
     {py35,py36,py37}-django21,
+    {py35,py36,py37}-django22,
     docs
 
 [testenv]
@@ -31,6 +32,7 @@ deps =
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
     elasticsearch
     flask
     flask-sqlalchemy
