--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,10 @@ envlist =
     {py27,py34,py35,py36}-django111,
     {py34,py35,py36,py37}-django20,
     {py35,py36,py37}-django21,
-    {py35,py36,py37}-django22,
-    docs
+    {py35,py36,py37}-django22
 
 [testenv]
 basepython =
-    {docs,spell}: {env:TOXPYTHON:python3.7}
     py27: {env:TOXPYTHON:python2.7}
     py34: {env:TOXPYTHON:python3.4}
     py35: {env:TOXPYTHON:python3.5}
@@ -51,24 +49,6 @@ deps =
     webtest
 commands =
     {posargs:py.test --cov=scout_apm --cov-report=term-missing tests}
-
-[testenv:spell]
-setenv =
-    SPELLCHECK=1
-commands =
-    sphinx-build -b spelling docs dist/docs
-skip_install = true
-deps =
-    -r{toxinidir}/docs/requirements.txt
-    sphinxcontrib-spelling
-    pyenchant
-
-[testenv:docs]
-deps =
-    sphinx
-commands =
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
 
 [testenv:check]
 deps =
