Improve tox + pytest setup
Allow passing arguments through rather than whole commands with {posargs}, always have coverage using pytest `addopts`, and use modern `pytest` name rather than deprecated `py.test`.

--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ deps =
     urllib3
     webtest
 commands =
-    {posargs:py.test --cov=scout_apm --cov-report=term-missing tests}
+    pytest {posargs}
 
 [testenv:check]
 deps =
