Enforce UTF-8 coding in all Python files
This is needed for Python 2.7, which without a coding comment, defaults to the system encoding. This can cause problems in rare situations - and I already managed to write a test that broke on Python 2.7 (emoji).

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,11 @@ omit =
     src/scout_apm/core/monkey.py
 
 [flake8]
+# core
 ignore = E203,W503
 max-line-length = 88
+# flake8-coding
+accept-encodings = utf-8
 
 [isort]
 default_section = THIRDPARTY
