--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ accept-encodings = utf-8
 default_section = THIRDPARTY
 force_grid_wrap = 0
 include_trailing_comma = True
-known_first_party = scout_apm
+known_first_party = scout_apm,tests
 line_length = 88
 multi_line_output = 3
 not_skip = __init__.py
