Run 'twine check' in tests
This ensures that the package is built in a valid format for PyPI, including the README syntax. Run it on both tox and travis wheel building steps - tox to fail early, and travis to be exhaustive on all the built wheels.

--- a/tox.ini
+++ b/tox.ini
@@ -57,13 +57,14 @@ deps =
     flake8
     flake8-coding
     isort
-skip_install = true
+    twine
 commands =
     python setup.py check --strict --metadata
     check-manifest {toxinidir}
     black --check src tests setup.py
     isort --check-only --recursive src tests setup.py
     flake8 src tests setup.py
+    twine check {distdir}/*
 
 [testenv:coveralls]
 deps =
