Add Falcon integration
Add a middleware that implements basic tracking of Falcon resources, with operations named after the current resource name plus the method called on it. The method name is retrieved through stack inspection, which can fail and in that case we use the raw HTTP method name instead.

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ deps =
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     elasticsearch
+    falcon
     flask
     flask-sqlalchemy
     jinja2
