--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ basepython =
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
     py37: {env:TOXPYTHON:python3.7}
-    {clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3.7}
+    {clean,check,report}: {env:TOXPYTHON:python3.7}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -66,21 +66,6 @@ commands =
     isort --check-only --recursive src tests setup.py
     flake8 src tests setup.py
     twine check {distdir}/*
-
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-commands =
-    coveralls []
-
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    coverage xml --ignore-errors
-    codecov []
 
 [testenv:report]
 deps = coverage
