--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,7 @@ ignore =
 
 [coverage:run]
 branch = True
-omit =
-    src/scout_apm/core/cli/core_agent_manager.py
-    src/scout_apm/core/monkey.py
+omit = src/scout_apm/core/monkey.py
 
 [flake8]
 # core
