Add Dramatiq integration
Fixes #222.

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
+    dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch
     falcon
     flask
