Test with Django 3.0

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     {py34,py35,py36,py37}-django20,
     {py35,py36,py37}-django21,
     {py35,py36,py37}-django22
+    {py36,py37}-django30
 
 [testenv]
 basepython =
@@ -30,6 +31,7 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
+    django30: Django>=3.0a1,<3.1
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch
     falcon
