--- a/setup.cfg
+++ b/setup.cfg
@@ -20,12 +20,16 @@ max-line-length = 88
 # flake8-coding
 accept-encodings = utf-8
 
-[isort]
+[isort]\
+add_imports =
+    from __future__ import absolute_import
+    from __future__ import division
+    from __future__ import print_function
+    from __future__ import unicode_literals
 default_section = THIRDPARTY
 force_grid_wrap = 0
 include_trailing_comma = True
 known_first_party = scout_apm,tests
 line_length = 88
 multi_line_output = 3
-not_skip = __init__.py
 use_parentheses = True
