Remove unnecessary trailing slash in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ max-line-length = 88
 # flake8-coding
 accept-encodings = utf-8
 
-[isort]\
+[isort]
 add_imports =
     from __future__ import absolute_import
     from __future__ import division
