--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ deps =
     pymongo
     pyramid
     pytest
+    pytest-asyncio ; python_version >= "3.6"
     pytest-travis-fold
     pytest-cov
     redis
