--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ passenv =
     *
 usedevelop = false
 deps =
+    asgiref ; python_version >= "3.6"
     bottle
     celery
     django18: Django>=1.8,<1.9
