working asgi application example with wrapper

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ passenv =
     *
 usedevelop = false
 deps =
+    asgiref ; python_version >= "3.6"
     bottle
     celery
     django18: Django>=1.8,<1.9
@@ -44,7 +45,6 @@ deps =
     pymongo
     pyramid
     pytest
-    pytest-asyncio ; python_version >= "3.6"
     pytest-travis-fold
     pytest-cov
     redis
