workaround to run check on Python 3.8

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ basepython =
     py36: {env:TOXPYTHON:python3.6}
     py37: {env:TOXPYTHON:python3.7}
     py38: {env:TOXPYTHON:python3.8}
-    {clean,check,report}: {env:TOXPYTHON:python3.7}
+    {clean,check,report}: {env:TOXPYTHON:python3.8}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -72,7 +72,9 @@ commands =
     check-manifest {toxinidir}
     black --check src tests setup.py
     isort --check-only --recursive src tests setup.py
-    flake8 src tests setup.py
+    # --jobs 0 is used because of https://gitlab.com/pycqa/flake8/issues/587
+    # should be removed when fixed to speed up
+    flake8 --jobs 0 src tests setup.py
     twine check {distdir}/*
 
 [testenv:report]
