--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ branch = True
 # black-recommended setup with flake8-bugbear
 max-line-length = 80
 select = C,E,F,W,B,B950
-ignore = E501,W503
+ignore = E203,E501,W503
 # flake8-coding
 accept-encodings = utf-8
 
