Lint with flake8-bugbear (#316)
Add this Flake8 plugin which has some good extra rules and is the recommended way of checking about Black's line length.

Fix these issues it flagged:

```
src/scout_apm/core/instrument_manager.py:22:22: B009 Do not call getattr with a constant attribute value, it is not any safer than normal property access.
src/scout_apm/core/web_requests.py:11:182: B950 line too long (181 > 80 characters)
src/scout_apm/api/__init__.py:45:55: B006 Do not use mutable data structures for argument defaults.  They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
src/scout_apm/api/__init__.py:73:35: B006 Do not use mutable data structures for argument defaults.  They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
src/scout_apm/api/__init__.py:78:37: B006 Do not use mutable data structures for argument defaults.  They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
src/scout_apm/api/__init__.py:108:31: B006 Do not use mutable data structures for argument defaults.  They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
src/scout_apm/api/__init__.py:117:31: B006 Do not use mutable data structures for argument defaults.  They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
tests/integration/app.py:103:66: E203 whitespace before ':'
tests/integration/core/test_core_agent_manager.py:42:5: B011 Do not call assert False since python -O removes these calls. Instead callers should raise AssertionError().
```

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,10 @@ branch = True
 
 [flake8]
 # core
-ignore = E203,W503
-max-line-length = 88
+# black-recommended setup with flake8-bugbear
+max-line-length = 80
+select = C,E,F,W,B,B950
+ignore = E203,E501,W503
 # flake8-coding
 accept-encodings = utf-8
 
