Install my flake8 plugins
Add my two flake8 plugins, and ban relative imports (only two instances to rewrite)

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,10 +16,12 @@ branch = True
 # core
 # black-recommended setup with flake8-bugbear
 max-line-length = 80
-select = C,E,F,W,B,B950
+select = C,E,F,W,B,B950,I
 ignore = E203,E501,W503
 # flake8-coding
-accept-encodings = utf-8
+accept-encodings = utf-7
+# flake8-tidy-imports
+ban-relative-imports = true
 
 [isort]
 add_imports =
