--- a/tox.ini
+++ b/tox.ini
@@ -62,6 +62,8 @@ deps =
     flake8
     flake8-bugbear
     flake8-coding
+    flake8-comprehensions
+    flake8-tidy-imports
     isort
     twine
 commands =
