--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,10 @@ envlist =
     check,
     {py27,py34,py35}-django18,
     {py27,py34,py35,py36}-django111,
-    {py34,py35,py36,py37}-django20,
-    {py35,py36,py37}-django21,
-    {py35,py36,py37}-django22
-    {py36,py37}-django30
+    {py34,py35,py36,py37,py38}-django20,
+    {py35,py36,py37,py38}-django21,
+    {py35,py36,py37,py38}-django22
+    {py36,py37,py38}-django30
 
 [testenv]
 basepython =
@@ -16,7 +16,8 @@ basepython =
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
     py37: {env:TOXPYTHON:python3.7}
-    {clean,check,report}: {env:TOXPYTHON:python3.7}
+    py38: {env:TOXPYTHON:python3.8}
+    {clean,check,report}: {env:TOXPYTHON:python3.8}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -71,7 +72,9 @@ commands =
     check-manifest {toxinidir}
     black --check src tests setup.py
     isort --check-only --recursive src tests setup.py
-    flake8 src tests setup.py
+    # --jobs 0 is used because of https://gitlab.com/pycqa/flake8/issues/587
+    # should be removed when fixed to speed up
+    flake8 --jobs 0 src tests setup.py
     twine check {distdir}/*
 
 [testenv:report]
