--- a/tox.ini
+++ b/tox.ini
@@ -29,8 +29,11 @@ deps =
     celery
     django18: Django>=1.8,<1.9
     django111: Django>=1.11,<2.0
+    django111: django-tastypie
     django20: Django>=2.0,<2.1
+    django20: django-tastypie
     django21: Django>=2.1,<2.2
+    django21: django-tastypie
     django22: Django>=2.2,<2.3
     django30: Django>=3.0a1,<3.1
     dramatiq>=1.0.0 ; python_version >= "3.5"
