Lint with flake8-print
Prevent print() statements from getting into committed source code. This found some I accidentally left in #324, plus two in the 'integration all-in-one app' that I've rewritten with logging.

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ branch = True
 # core
 # black-recommended setup with flake8-bugbear
 max-line-length = 80
-select = C,E,F,W,B,B950,I
+select = C,E,F,W,B,B950,I,T
 ignore = E203,E501,W503
 # flake8-coding
 accept-encodings = utf-7
