Start rq instrumentation

--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ deps =
     django30: Django>=3.0a1,<3.1
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch
+    fakeredis
     falcon
     flask
     flask-sqlalchemy
@@ -54,6 +55,7 @@ deps =
     pytest-cov
     redis
     requests
+    rq
     six
     sqlalchemy
     starlette ; python_version >= "3.6"
