--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ deps =
     django21: django-tastypie
     django22: Django>=2.2,<2.3
     django30: Django>=3.0a1,<3.1
+    djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch
     fakeredis
