Try Twine 3.0.0 without '--non-interactive' as that's what worked on Nov 19

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
         - twine check dist/* wheelhouse/*
         - ls -al dist wheelhouse
         - if [ "${TRAVIS_TAG:-}" != "" ]; then
-            twine upload --non-interactive --skip-existing dist/* wheelhouse/*;
+            twine upload --skip-existing dist/* wheelhouse/*;
           fi
 
 notifications:
