Require channels in tests

--- a/tox.ini
+++ b/tox.ini
@@ -31,17 +31,22 @@ deps =
     celery
     django18: Django>=1.8,<1.9
     django18: djangorestframework>=3.6,<3.7  # https://www.django-rest-framework.org/community/release-notes/
+    django111: channels
     django111: Django>=1.11,<2.0
     django111: djangorestframework
     django111: django-tastypie
+    django20: channels
     django20: Django>=2.0,<2.1
     django20: djangorestframework
     django20: django-tastypie
+    django21: channels
     django21: Django>=2.1,<2.2
     django21: djangorestframework
     django21: django-tastypie
+    django22: channels
     django22: Django>=2.2,<2.3
     django22: djangorestframework
+    django30: channels
     django30: Django>=3.0a1,<3.1
     django30: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
