Lint with pre-commit
Use [pre-commit](https://pre-commit.com/) to lint on every commit and save time from creating PR's only to watch them fail code style checks on CI.

Rewrite the docs for a simpler tox-centric setup process and how to install pre-commit.

--- a/tox.ini
+++ b/tox.ini
@@ -83,15 +83,11 @@ deps =
     flake8-tidy-imports
     flake8-print
     isort
+    pre-commit
     twine
 commands =
-    python setup.py check --strict --metadata
     check-manifest {toxinidir}
-    black --check src tests setup.py
-    isort --check-only --recursive src tests setup.py
-    # --jobs 0 is used because of https://gitlab.com/pycqa/flake8/issues/587
-    # should be removed when fixed to speed up
-    flake8 --jobs 0 src tests setup.py
+    pre-commit run --all-files
     twine check {distdir}/*
 
 [testenv:report]
