Make tests error on any warnings we raise
Configure warnings through Pytest's [filterwarnings option](https://docs.pytest.org/en/latest/warnings.html) so if we cause a warning to be raised, the test fails. Also improve octal tests slightly.

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,3 +33,6 @@ addopts = --cov=scout_apm
           # E               TypeError: wrap_socket() got an unexpected keyword argument '_context'
           -p no:pytest_nameko
 norecursedirs = src
+filterwarnings =
+    error:::scout_apm
+    error:::tests
