fix mock in compat and how we install it

--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ deps =
     httpretty
     jinja2
     nameko<3
-    py27: mock
+    mock ; python_version < "3.0"
     psutil
     pymongo
     pyramid
