--- a/tox.ini
+++ b/tox.ini
@@ -31,15 +31,15 @@ deps =
     celery
     django18: Django>=1.8,<1.9
     django18: djangorestframework>=3.6,<3.7  # https://www.django-rest-framework.org/community/release-notes/
-    django111: channels ; python_version >= "3.5"
+    django111: channels<2.4.0 ; python_version >= "3.5"
     django111: Django>=1.11,<2.0
     django111: djangorestframework
     django111: django-tastypie
-    django20: channels ; python_version >= "3.5"
+    django20: channels<2.4.0 ; python_version >= "3.5"
     django20: Django>=2.0,<2.1
     django20: djangorestframework
     django20: django-tastypie
-    django21: channels ; python_version >= "3.5"
+    django21: channels<2.4.0 ; python_version >= "3.5"
     django21: Django>=2.1,<2.2
     django21: djangorestframework
     django21: django-tastypie
