Make tests error on any unknown warning
Fixes #296. Seems there were less third party warnings to chase down than I thought.

--- a/pytest.ini
+++ b/pytest.ini
@@ -34,5 +34,9 @@ addopts = --cov=scout_apm
           -p no:pytest_nameko
 norecursedirs = src
 filterwarnings =
-    error:::scout_apm
-    error:::tests
+    error
+    ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
+    ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:dns.namedict
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:bs4.element
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:nameko.exceptions
