Avoid urllib3 warnings by being secure

--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ deps =
     six
     sqlalchemy
     starlette ; python_version >= "3.6"
-    urllib3
+    urllib3[secure]
     webtest
 commands =
     pytest {posargs}
