--- a/pytest.ini
+++ b/pytest.ini
@@ -37,6 +37,8 @@ filterwarnings =
     error
     ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:dns.namedict
+    ignore:parameter codeset is deprecated:DeprecationWarning:gettext
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:bs4.element
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.fields
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:dns.namedict
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:nameko.exceptions
