ignore one moree colections.abc

--- a/pytest.ini
+++ b/pytest.ini
@@ -40,5 +40,6 @@ filterwarnings =
     ignore:parameter codeset is deprecated:DeprecationWarning:gettext
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:bs4.element
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.fields
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.sql.query
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:dns.namedict
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:nameko.exceptions
