--- a/pytest.ini
+++ b/pytest.ini
@@ -36,9 +36,9 @@ norecursedirs = src
 filterwarnings =
     error
     ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
+    ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
     ignore:parameter codeset is deprecated:DeprecationWarning:gettext
-    ignore:the imp module is deprecated.*:PendingDeprecationWarning:imp
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:bs4.element
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.fields
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.sql.query
