Remove error right now to see all traces

--- a/pytest.ini
+++ b/pytest.ini
@@ -34,7 +34,7 @@ addopts = --cov=scout_apm
           -p no:pytest_nameko
 norecursedirs = src
 filterwarnings =
-    error
+    default
     ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
     ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
