--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ passenv =
 usedevelop = false
 deps =
     bottle
+    cherrypy
     celery
     django18: Django>=1.8,<1.9
     django18: djangorestframework>=3.6,<3.7  # https://www.django-rest-framework.org/community/release-notes/
