--- a/tox.ini
+++ b/tox.ini
@@ -69,6 +69,7 @@ deps =
     check-manifest
     black
     flake8
+    flake8-2020
     flake8-bugbear
     flake8-coding
     flake8-comprehensions
