--- a/pytest.ini
+++ b/pytest.ini
@@ -34,5 +34,13 @@ addopts = --cov=scout_apm
           -p no:pytest_nameko
 norecursedirs = src
 filterwarnings =
-    error:::scout_apm
-    error:::tests
+    default
+    ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
+    ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
+    ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
+    ignore:parameter codeset is deprecated:DeprecationWarning:gettext
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:bs4.element
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.fields
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.sql.query
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:dns.namedict
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:nameko.exceptions
