--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,7 @@ deps =
     six
     sqlalchemy
     starlette ; python_version >= "3.6"
-    urllib3
+    urllib3[secure]
     webtest
 commands =
     pytest {posargs}
