Actually error on warnings
PR #429 set the base configuration to "default" which just prints the warnings rather than erroring on them. This fixes that.

However, luckily the printing behaviour showed some warnings still - `ImportWarning`s and `ResourceWarning`s. By default [Python suppresses these](https://docs.python.org/3/library/warnings.html#default-warning-filter) and [Pytest doesn't replace those filters](https://docs.pytest.org/en/latest/warnings.html#deprecationwarning-and-pendingdeprecationwarning).

This PR sets the main action to 'error', and specifies extra filters to override the default ones Python configures.

--- a/pytest.ini
+++ b/pytest.ini
@@ -34,7 +34,12 @@ addopts = --cov=scout_apm
           -p no:pytest_nameko
 norecursedirs = src
 filterwarnings =
-    default
+    error
+    error::DeprecationWarning
+    error::PendingDeprecationWarning
+    error::ImportWarning
+    always::ResourceWarning
+    ignore::ResourceWarning:httpretty.core
     ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
     ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
