Don't show errors for ResourceWarning

--- a/pytest.ini
+++ b/pytest.ini
@@ -38,7 +38,8 @@ filterwarnings =
     error::DeprecationWarning
     error::PendingDeprecationWarning
     error::ImportWarning
-    always::ResourceWarning
+    ; Can't add this because ResourceWarning doesn't exist on Python 2:
+    ; always::ResourceWarning
     ignore::ResourceWarning:httpretty.core
     ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
     ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
