ResourceWarning filter on Python 3 only

--- a/pytest.ini
+++ b/pytest.ini
@@ -34,13 +34,14 @@ addopts = --cov=scout_apm
           -p no:pytest_nameko
 norecursedirs = src
 filterwarnings =
+    always
     error
     error::DeprecationWarning
     error::PendingDeprecationWarning
     error::ImportWarning
-    ; Can't add this because ResourceWarning doesn't exist on Python 2:
+    ; Can't add these because ResourceWarning doesn't exist on Python 2:
     ; always::ResourceWarning
-    ignore::ResourceWarning:httpretty.core
+    ; ignore::ResourceWarning:httpretty.core
     ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
     ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
