--- a/pytest.ini
+++ b/pytest.ini
@@ -38,7 +38,7 @@ filterwarnings =
     error
     error::DeprecationWarning
     error::PendingDeprecationWarning
-    error::ImportWarning
+    always::ImportWarning
     ; Can't add these because ResourceWarning doesn't exist on Python 2:
     ; always::ResourceWarning
     ; ignore::ResourceWarning:httpretty.core
