--- a/tox.ini
+++ b/tox.ini
@@ -62,6 +62,8 @@ deps =
     pytest
     pytest-travis-fold
     pytest-cov
+    pyyaml ; python_version != "3.4"
+    pyyaml < 5.3 ; python_version == "3.4"
     redis
     requests
     rq
