Blanket ignonre imp and collections.abc warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -42,12 +42,11 @@ filterwarnings =
     ; Can't add these because ResourceWarning doesn't exist on Python 2:
     ; always::ResourceWarning
     ; ignore::ResourceWarning:httpretty.core
-    ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
-    ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
+    ; Too many things in the Python universe haven't updated for these moves,
+    ; so always ignore them:
+    ignore:the imp module is deprecated.*:DeprecationWarning
+    ignore:the imp module is deprecated.*:PendingDeprecationWarning
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning
+    ; Deprecations in our libraries
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
     ignore:parameter codeset is deprecated:DeprecationWarning:gettext
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:bs4.element
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.fields
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.sql.query
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:dns.namedict
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:nameko.exceptions
