Ignore two more on Python 3.8

--- a/pytest.ini
+++ b/pytest.ini
@@ -49,4 +49,6 @@ filterwarnings =
     ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning
     ; Deprecations in our libraries
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
-    ignore:parameter codeset is deprecated:DeprecationWarning:gettext
+    ; Appears in both gettext and Django:
+    ignore:parameter codeset is deprecated:DeprecationWarning
+    ignore:"errors" is deprecated. Use "encoding_errors" instead:DeprecationWarning:redis.client
