Only test supported Hug versions on its supported Python versions 3.5+

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ deps =
     flask
     flask-sqlalchemy
     huey
-    hug
+    hug>=2.5.1 ; python_version >= "3.5"
     httpretty
     jinja2
     nameko<3
