Add Hug integration (#460)
Fixes #336.

Hug uses Falcon under the hood, so this builds on top of it to provide a Hug integration with a separate interface.

--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,7 @@ deps =
     flask
     flask-sqlalchemy
     huey
+    hug>=2.5.1 ; python_version >= "3.5"
     httpretty
     jinja2
     nameko<3
