--- a/pytest.ini
+++ b/pytest.ini
@@ -34,13 +34,21 @@ addopts = --cov=scout_apm
           -p no:pytest_nameko
 norecursedirs = src
 filterwarnings =
-    default
-    ignore:the imp module is deprecated.*:DeprecationWarning:eventlet
-    ignore:the imp module is deprecated.*:PendingDeprecationWarning:distutils
+    always
+    error
+    error::DeprecationWarning
+    error::PendingDeprecationWarning
+    always::ImportWarning
+    ; Can't add these because ResourceWarning doesn't exist on Python 2:
+    ; always::ResourceWarning
+    ; ignore::ResourceWarning:httpretty.core
+    ; Too many things in the Python universe haven't updated for these moves,
+    ; so always ignore them:
+    ignore:the imp module is deprecated.*:DeprecationWarning
+    ignore:the imp module is deprecated.*:PendingDeprecationWarning
+    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning
+    ; Deprecations in our libraries
     ignore:dns.hash module will be removed.*:DeprecationWarning:dns.hash
-    ignore:parameter codeset is deprecated:DeprecationWarning:gettext
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:bs4.element
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.fields
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:django.db.models.sql.query
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:dns.namedict
-    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning:nameko.exceptions
+    ; Appears in both gettext and Django:
+    ignore:parameter codeset is deprecated:DeprecationWarning
+    ignore:"errors" is deprecated. Use "encoding_errors" instead:DeprecationWarning:redis.client
