Fix warning error on Python 2.7

--- a/pytest.ini
+++ b/pytest.ini
@@ -52,3 +52,5 @@ filterwarnings =
     ; Appears in both gettext and Django:
     ignore:parameter codeset is deprecated:DeprecationWarning
     ignore:"errors" is deprecated. Use "encoding_errors" instead:DeprecationWarning:redis.client
+    ; Triggered on Python 2.7 only:
+    ignore:unicode for buf is no longer accepted, use bytes:DeprecationWarning:urllib3.contrib.pyopenssl
