Ignore asgiref triggered asyncio deprecation warning

--- a/pytest.ini
+++ b/pytest.ini
@@ -34,7 +34,6 @@ addopts = --cov=scout_apm
           -p no:pytest_nameko
 norecursedirs = src
 filterwarnings =
-    always
     error
     error::DeprecationWarning
     error::PendingDeprecationWarning
@@ -54,3 +53,6 @@ filterwarnings =
     ignore:"errors" is deprecated. Use "encoding_errors" instead:DeprecationWarning:redis.client
     ; Triggered on Python 2.7 only:
     ignore:unicode for buf is no longer accepted, use bytes:DeprecationWarning:urllib3.contrib.pyopenssl
+    ; Triggered by asgiref on Python 3.7+:
+    ignore:.*Task.all_tasks\(\) is deprecated, use asyncio.all_tasks\(\) instead.*:PendingDeprecationWarning
+    ignore:.*Task.all_tasks\(\) is deprecated, use asyncio.all_tasks\(\) instead.*:DeprecationWarning
