--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,8 @@ deps =
     flask-sqlalchemy
     huey
     hug>=2.5.1 ; python_version >= "3.5"
-    httpretty
+    httpretty<1 ; python_version < "3.5"
+    httpretty ; python_version >= "3.5"
     jinja2
     nameko<3
     mock ; python_version < "3.0"
