Test with GitHub Actions

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,15 @@ envlist =
     {py35,py36,py37,py38}-django22
     {py36,py37,py38}-django30
 
+[gh-actions]
+python =
+    2.7: py27-django18,py27-django111
+    3.4: py34-django18,py34-django111,py34-django20
+    3.5: py35-django18,py35-django111,py35-django20,py35-django21,py35-django22
+    3.6: py36-django111,py36-django20,py36-django21,py36-django30
+    3.7: py37-django20,py37-django21,py37-django22,py37-django30
+    3.8: check,py38-django20,py38-django21,py38-django22,py38-django30
+
 [testenv]
 basepython =
     py27: {env:TOXPYTHON:python2.7}
