--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,10 @@ jobs:
     - name: Install dependencies
       run: python -m pip install --upgrade tox
     - name: Run tox targets for ${{ matrix.python-version }}
-      run: TOXENV=$(tox --listenvs | grep "py${${{ matrix.python-version }}/./}-" | tr '\n' ',') python -m tox
+      run: |
+        ENV_PREFIX=$(echo "py${{ matrix.python-version }}-" | tr -d ".")
+        TOXENV=$(tox --listenvs | grep $ENV_PREFIX | tr '\n' ',')
+        python -m tox
     - name: Run checks
       if: matrix.python-version == '3.8'
       run: python -m tox -e check
