Update tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    clean,
-    check,
+    py38-codestyle,
     {py27,py34,py35}-django18,
     {py27,py34,py35,py36}-django111,
     {py34,py35,py36,py37,py38}-django20,
@@ -10,16 +9,7 @@ envlist =
     {py36,py37,py38}-django30
 
 [testenv]
-basepython =
-    py27: {env:TOXPYTHON:python2.7}
-    py34: {env:TOXPYTHON:python3.4}
-    py35: {env:TOXPYTHON:python3.5}
-    py36: {env:TOXPYTHON:python3.6}
-    py37: {env:TOXPYTHON:python3.7}
-    py38: {env:TOXPYTHON:python3.8}
-    {clean,check,report}: {env:TOXPYTHON:python3.8}
 setenv =
-    PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
 passenv =
     ELASTICSEARCH_URL
@@ -75,7 +65,7 @@ deps =
 commands =
     pytest {posargs}
 
-[testenv:check]
+[testenv:py38-codestyle]
 deps =
     check-manifest
     black
@@ -92,16 +82,3 @@ commands =
     check-manifest {toxinidir}
     pre-commit run --all-files
     twine check {distdir}/*
-
-[testenv:report]
-deps = coverage
-skip_install = true
-commands =
-    coverage report
-    coverage html
-
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands = coverage erase
-
