--- a/tox.ini
+++ b/tox.ini
@@ -77,6 +77,6 @@ deps =
     pre-commit
     twine
 commands =
-    check-manifest {toxinidir}
+    check-manifest
     pre-commit run --all-files
     twine check {distdir}/*
