Delete travis release, uncomment the real upload code

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,8 @@ jobs:
       run: ls -al dist wheelhouse
     - name: Release
       if: ${{ github.event_name == 'tag' && startsWith(github.ref, 'v') }}
-      run: "echo publish"
-      # env:
-      #   TWINE_NON_INTERACTIVE: 1
-      #   TWINE_USERNAME: __token__
-      #   TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-      # run: twine upload --skip-existing dist/* wheelhouse/*
+      env:
+        TWINE_NON_INTERACTIVE: 1
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+      run: twine upload --skip-existing dist/* wheelhouse/*
