--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ passenv =
     MONGODB_URL
     REDIS_URL
 deps =
+    aioredis ; python_version >= "3.6"
     bottle
     cherrypy
     celery!=4.4.4  # https://github.com/celery/celery/issues/6153
