Ignore cryptography import warning on Python 3.5

--- a/pytest.ini
+++ b/pytest.ini
@@ -59,3 +59,5 @@ filterwarnings =
     ignore:.*Task.all_tasks\(\) is deprecated, use asyncio.all_tasks\(\) instead.*:DeprecationWarning
     ; cryptography raises a deprecation warning on Python 2
     ignore:Python 2 is no longer supported by the Python core team\..*
+    ; cryptography raises a deprecation warning on Python 3.5
+    ignore:Python 3\.5 support will be dropped in the next release.*:UserWarning
