--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,8 @@ deps =
     bottle
     cherrypy
     celery!=4.4.4  # https://github.com/celery/celery/issues/6153
+    cryptography ; python_version >= "3.6"
+    cryptography<3.2 ; python_version < "3.6"
     django18: Django>=1.8,<1.9
     django18: djangorestframework>=3.6,<3.7  # https://www.django-rest-framework.org/community/release-notes/
     django111: Django>=1.11,<2.0
