Test with Django 3.1

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     {py35,py36,py37,py38}-django21
     {py35,py36,py37,py38}-django22
     {py36,py37,py38}-django30
+    {py36,py37,py38}-django31
 
 [testenv]
 passenv =
@@ -36,6 +37,8 @@ deps =
     django22: djangorestframework
     django30: Django>=3.0a1,<3.1
     django30: djangorestframework
+    django31: Django>=3.1,<3.2
+    django31: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch
     falcon
