Ignore Django 3.1 warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -61,3 +61,6 @@ filterwarnings =
     ignore:Python 2 is no longer supported by the Python core team\..*
     ; cryptography raises a deprecation warning on Python 3.5
     ignore:Python 3\.5 support will be dropped in the next release.*:UserWarning
+    ; Django 3.1 warnings
+    ; RemovedInDjango40Warning to be fixed in https://github.com/encode/django-rest-framework/issues/7406
+    ignore:django\.conf\.urls\.url\(\) is deprecated.*:PendingDeprecationWarning:rest_framework.routers
