Pin Django 1.11 DRF version (#591)
The latest 3.12 series doesn't support Django 1.11.

--- a/tox.ini
+++ b/tox.ini
@@ -23,9 +23,9 @@ deps =
     cryptography ; python_version >= "3.6"
     cryptography<3.2 ; python_version < "3.6"
     django18: Django>=1.8,<1.9
-    django18: djangorestframework>=3.6,<3.7  # https://www.django-rest-framework.org/community/release-notes/
+    django18: djangorestframework<3.7  # https://www.django-rest-framework.org/community/release-notes/
     django111: Django>=1.11,<2.0
-    django111: djangorestframework
+    django111: djangorestframework<3.12  # https://www.django-rest-framework.org/community/3.11-announcement/
     django111: django-tastypie
     django20: Django>=2.0,<2.1
     django20: djangorestframework
