Ignore deprecation warning in pytest

--- a/pytest.ini
+++ b/pytest.ini
@@ -64,3 +64,5 @@ filterwarnings =
     ; Django 3.1 warnings
     ; RemovedInDjango40Warning to be fixed in https://github.com/encode/django-rest-framework/issues/7406
     ignore:django\.conf\.urls\.url\(\) is deprecated.*:PendingDeprecationWarning:rest_framework.routers
+    ; Django 2.7 Support deprecation warning
+    ignore:Support for your Python version is deprecated and will be removed in the future:DeprecationWarning
